[package]
name = "radix-ecmascript"
version = "0.1.0"
edition = "2021"
authors = ["Levi-Michael Taylor"]
description = "Convert floating-point types to string representation as defined in ECMAScript Language Specification Section 9.8.1"
license-file = "LICENSE.txt"
keywords = ["radix", "ecmascript", "javascript"]
homepage = "https://github.com/levi-nz/radix-ecmascript"
repository = "https://github.com/levi-nz/radix-ecmascript"
readme = "README.md"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "to_radix_str"
harness = false
